theme/style_base.css
/* ... */
#profile-search .profile-search-filter .search-field .label { margin: 0 0 10px 0; padding: 0 0 5px 0; border-bottom: 1px solid #ccc; }
#profile-search .profile-search-filter .search-field input[type="text"], #profile-search .profile-search-filter .search-field label { float: left; }
#profile-search .profile-search-filter .search-field.single input[type="text"] { width: 48%; }
#profile-search .profile-search-filter .search-field .stubby { width: 24%; float: left; }
#profile-search .profile-search-filter .search-field.double label { margin: 0 10px 0 10px; width: 15%; padding: 0; border: none; line-height: 22px; }
#profile-search .profile-search-filter .search-field label { width: 45%; text-align :right; padding: 0 10px 0 0; line-height: 12px; }
#profile-search .profile-search-filter .search-field label[for="ProfileCustomID7"] { line-height: normal; }
#profile-search .profile-search-filter .search-field select { width: 50%; height: 24px; }

/* Search Form: Advanced  /client-view/{code}/ (view-profilesecure.php) */
#profile-private  { }

/* Profile Sidebar */
#profile-sidebar { width: 200px; padding: 10px; float: right; }
#profile-sidebar a { color: #28536C; }
#profile-sidebar a:hover { color: #2F617F; }  
#profile-sidebar ul { margin: 0; padding: 0; }
#profile-sidebar ul li { list-style: none; }

/* Profile Layouts */
#rbprofile #info h2 { padding: 15px 0px; margin: 15px 0px 0px 0px; }
#rbprofile #stats ul { list-style: none; margin: 0px; padding: 0px; line-height: 22px; font-size: 13px; }
#rbprofile #profile-picture { background: #e9e9e9; padding: 15px; }

/* Profile Layout with Thumbnails (include-profile-layout0.php) */
#rblayout-zero #photos { font-size: 0px; }
#rblayout-zero #photos .inner { margin: 0 -5px; }
#rblayout-zero #photos .photo { width: 40%; max-width: 135px; overflow: hidden; display: inline-block; margin: 0px 15px 15px 0px; border-radius: 5px;
	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffffff), color-stop(1, #ddd) );
	background:-moz-linear-gradient( center top, #ffffff 5%, #ddd 100% );
	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ddd');
	background-color:#ffffff;
	-moz-border-radius:3px;
	-webkit-border-radius:3px;
	box-shadow: 0px 0px 3px rgba(0,0,0,0.5)
}
#rblayout-zero #photos .photo a { display: block; overflow: hidden; margin: 5px; border-radius: 2px; border: 1px solid #ddd; position: relative; }
#rblayout-zero #photos .photo a img { float: left; }
#rblayout-zero #photos .photo a img.fillheight { position: absolute; left: -25%; }
#rblayout-zero #stats { border: 1px solid #ccc; padding: 15px; }
#rblayout-zero #stats h2 { margin-bottom: 15px; }
#rblayout-zero #links ul li a { margin: 0px 5px 10px 5px; min-width: 200px; font-weight: normal; font-size: 14px; }
#rblayout-zero #movie { float: right; }
#rblayout-zero .experience { float: left; clear: both; margin: 20px 0 0 0; line-height: 18px; font-size: 13px; text-indent: 30px; }

/* Profile Layout with Thumbnails and Primary Image (include-profile-layout1.php) */
#rblayout-one { overflow: hidden; }
#rblayout-one #profile-picture,
#rblayout-one #links,
#rblayout-one #stats,
#rblayout-one #photos { margin: 0px 0px 30px 0px; }
#rblayout-one #links ul,
#rblayout-one #links ul li { list-style: none; margin: 0px 0px 5px 0px; padding: 0px; }
#rblayout-one #links ul li a { list-style: none; font-size: 13px; }
#rblayout-one #photos { padding: 15px; background: #e9e9e9; }
#rblayout-one #photos img { height: 150px; float: left; margin: 0px 10px 0px 0px; }
#rblayout-one #photos a:last-of-type img { margin-right: 0px; }

/* Profile Layout with Scrolling Thumbnails and Primary Image (include-profile-layout2.php) */
#rblayout-two { overflow: hidden; }
#rblayout-two .mCSB_container a img { max-height: 150px; float: left; border: 5px solid #e9e9e9; border-right: none; }
#rblayout-two .mCSB_container a:last-child img { border-right: 5px solid #e9e9e9; }

/* Profile Extended Layout (include-profile-layout3.php) */
#rblayout-three { overflow: hidden; }
#rblayout-three #go-back { margin-bottom: 10px; }
#rblayout-three #go-back a { font-size: 14px; font-weight: bold; text-decoration: none; text-transform: uppercase; }
#rblayout-three #profile-info p, #rblayout-three #profile-info ul { margin: 0 0 15px; }
#rblayout-three .row-zero { font-size: 30px; margin: 0 0 20px 0; overflow: hidden; }
#rblayout-three .row-one { padding: 10px 0; overflow: hidden; }
#rblayout-three .profile-picture-favorite { text-align: center; background: #ccc; font-size: 13px; padding: 5px; margin: 5px 0 0 0; }
#rblayout-three .profile-picture-favorite a { color: #666; }
#rblayout-three .profile-picture-favorite:hover { background: #bbb; }
#rblayout-three #profile-overview { line-height: 20px; }
#rblayout-three #profile-actions { line-height: 22px; }
#rblayout-three #profile-actions p,
#rblayout-three #profil-actions div { margin: 0px 0px 15px 0px; }
#rblayout-three #profile-actions div a { margin: 0px 0px 10px 0px; }
#rblayout-three #tab-panels .column { margin: 0px 0px 15px 0px }
#rblayout-three #tab-panels .column .tab-panel { overflow: hidden; padding: 15px; background: #e9e9e9; }
#rblayout-three #tab-panels .column .tab-panel p { margin: 0px 0px 15px 0px }
#rblayout-three #tab-panels .column .tab-panel ul { margin: 0px 0px 0px 15px; list-style: disc; }
#rblayout-three #tab-panels .row-photos div.photo { float: left; width: 160px; height: 160px; margin: 10px; overflow: hidden; background-color: #e9e9e9; border: 7px solid #fff; }
#rblayout-three #tab-panels .row-photos div.photo:hover { box-shadow: 0 0 3px #aaa; }
#rblayout-three #tab-panels .row-photos div.photo a { float: left; width: 100%; height: 100%; overflow: hidden; background-size: cover; background-position: center top; background-repeat: no-repeat;  }
#rblayout-three .row-two { overflow: hidden; margin: 20px 0 0 0; }
#rblayout-three .row-two #subMenuTab { overflow: hidden; }
/* ... */

